--- a/transformers/bundle-assets/style.css
+++ b/transformers/bundle-assets/style.css
@@ -42,7 +42,7 @@ main, .text {
 /* BUZZ TRACKING */
 
 /* Fixed header to display buzz location */
-#head {
+header {
 	position: fixed;
 	left: 0;
 	top: 0;
@@ -52,7 +52,7 @@ main, .text {
 	background: rgba(249, 236, 229, 0.9);
 	border-bottom: 1px solid rgb(229, 214, 189);
 }
-#head > p > * {
+header > p > * {
 	margin: 0 1em;
 }
 
@@ -88,7 +88,7 @@ rt, rp {
 
 /* SCROLL */
 
-#toggle {
+footer {
 	z-index: 1;
 	position: fixed;
 	right: 0; bottom: 0; left: 0;
@@ -96,13 +96,15 @@ rt, rp {
 	padding: 0.5em;
 	background: rgba(249, 236, 229, 0.9);
 	border-top: 1px solid rgb(229, 214, 189);
-	cursor: pointer;
+}
 
+#toggle {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	text-align: center;
+	cursor: pointer;
 }
 #toggle > div > span {
 	display: inline-block;
