--- a/transformers/bundle-assets/style.css
+++ b/transformers/bundle-assets/style.css
@@ -4,8 +4,8 @@
 /* Standard page width */
 body {
 	max-width: 8in;
-	margin: 4em auto 7em;
-	padding: 0 1em;
+	margin: 5em auto 5em;
+	padding: 2em 1em;
 	line-height: 1.5;
 	font-family: 'Novel Sans Pro', sans-serif;
 	font-size: 12pt;
@@ -47,14 +47,10 @@ main, .text {
 	left: 0;
 	top: 0;
 	right: 0;
-	height: 2em;
+	height: 5em;
 	padding: 0.5em;
 	background: rgba(249, 236, 229, 0.9);
 	border-bottom: 1px solid rgb(229, 214, 189);
-}
-@media screen and (max-width: 800px) {
-	#head { height: 5em; }
-	body { margin-top: 7em; }
 }
 #head > p > * {
 	margin: 0 1em;
@@ -145,7 +141,7 @@ kbd {
 	position: absolute;
 	top: -100%; left: 0; right: 0;
 	height: 7em;
-	margin-top: 3em;
+	margin-top: 5em;
 	box-sizing: border-box;
 	padding: 1em;
 
