Header: PG switcher

--- a/transformers/bundle-assets/style.css
+++ b/transformers/bundle-assets/style.css
@@ -56,6 +56,10 @@ header > p > * {
 	margin: 0 1em;
 }
 
+nav ul li .pg-ruby rt {
+	font-size: 70%;
+}
+
 /* Word highlighting */
 m {
 	cursor: pointer;
