--- a/transformers/bundle-assets/style.css
+++ b/transformers/bundle-assets/style.css
@@ -1,6 +1,11 @@
 /* BASIC TYPOGRAPHY */
 @import url('fonts.css');
 
+@import url('highlight.css');
+@import url('header.css');
+@import url('footer.css');
+@import url('pg.css');
+
 /* Standard page width */
 body {
 	max-width: 8in;
@@ -36,223 +41,4 @@ main, .text {
 
 #bonuses {
 	margin-top: 4em !important;
-}
-
-
-/* BUZZ TRACKING */
-
-/* Fixed header to display buzz location */
-header {
-	position: fixed;
-	left: 0;
-	top: 0;
-	right: 0;
-	height: 5em;
-	background: rgba(249, 236, 229, 0.9);
-	border-bottom: 1px solid rgb(229, 214, 189);
-}
-
-nav ul {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-}
-@media screen and (min-width: 700px) {
-	nav ul li {
-		float: left;
-	}
-	nav ul li:last-child {
-		float: right;
-	}
-	nav ul::after {
-		content: '';
-		display: block;
-		clear: both;
-	}
-}
-@media screen and (max-width: 699px) {
-	nav {
-		overflow-x: auto;
-		white-space: nowrap;
-	}
-	nav ul li {
-		display: inline-block;
-		vertical-align: top;
-	}
-}
-nav > ul > li {
-	margin-left: 1.5em;
-}
-nav > ul > li:last-child {
-	margin-right: 1.5em;
-}
-
-nav > ul > li > label {
-	display: block;
-	height: 2em;
-	line-height: 2.5em;
-	padding: 0 0.5em;
-	box-sizing: border-box;
-	border-bottom: 1px solid rgb(199, 184, 169);
-	font-style: italic;
-	/*text-align: center;*/
-}
-nav ul li > *:not(ul):not(label) {
-	display: block;
-	padding: 0 0.5em;
-	line-height: 3em;
-	color: inherit;
-	text-decoration: none;
-}
-nav ul li > a:hover {
-	background: rgb(241, 229, 214);
-}
-nav ul li #location {
-	display: inline-block;
-	min-width: 2em;
-	text-align: right;
-}
-nav ul li #wordparent {
-	min-width: 8em;
-}
-nav ul li .text:not(:empty) {
-	/*background: rgba(255, 255, 255, 0.6);
-	border-radius: 2px;
-	padding: 0.25em 0.5em;*/
-	line-height: 1;
-}
-
-nav ul li .pg-ruby rt {
-	font-size: 70%;
-}
-
-/* Word highlighting */
-m {
-	cursor: pointer;
-}
-
-m:hover {
-	background: #cf8;
-}
-m.toggle {
-	background: #cdf;
-}
-
-
-/* RUBY */
-
-ruby {
-	border-bottom: 3px solid #bef;
-}
-rt,
-rp {
-	font-family: 'Novel SansCond Pro', sans-serif;
-	font-size: 100%;
-	font-weight: normal;
-	font-style: normal;
-	color: #58c;
-}
-
-.pg-ruby ruby {
-	ruby-align: space-around;
-	ruby-overhang: auto; /* not supported */
-}
-.pg-ruby rt {
-	font-size: 80%;
-}
-.pg-inline rb {
-	padding-right: 0.15em;
-}
-.pg-inline rt,
-.pg-inline rp {
-	font-size: 90%;
-	display: inline;
-}
-
-.pg-hover ruby {
-	position: relative;
-	display: inline-flex;
-	flex-direction: column-reverse;
-}
-.pg-hover ruby rt,
-.pg-hover ruby rp {
-	display: none;
-}
-.pg-hover ruby rt {
-	display: inline;
-	position: absolute;
-	top: -2em;
-	left: 0;
-	background: white;
-	border: 1px solid black;
-	border-radius: 2px;
-	padding: 4px;
-}
-
-/* SCROLL */
-
-footer {
-	z-index: 1;
-	position: fixed;
-	right: 0; bottom: 0; left: 0;
-	height: 5em;
-	padding: 0.5em;
-	background: rgba(249, 236, 229, 0.9);
-	border-top: 1px solid rgb(229, 214, 189);
-}
-
-#toggle {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	text-align: center;
-	cursor: pointer;
-}
-#toggle > div > span {
-	display: inline-block;
-	vertical-align: middle;
-	text-align: left;
-	line-height: 1.25;
-}
-#toggle > div > .arr {
-	font-size: 200%;
-	font-feature-settings: 'ss06';
-	vertical-align: -4px;
-}
-#toggle > div > .clm {
-	margin-left: 1em;
-	width: 5em;
-}
-#toggle.up .down,
-#toggle.down .up {
-	display: none;
-}
-
-kbd {
-	display: inline-block;
-	padding: 0.2em 0.6em;
-	font-family: sans-serif;
-	line-height: 1.4;
-	color: #222;
-	background-color: #eee;
-	border: 1px solid #999;
-	border-radius: 3px;
-	box-shadow: 1px 0px 1px 0 #eee, 0 2px 0 2px #ccc, 0 2px 0 3px #999;
-}
-
-#line {
-	z-index: -2;
-	position: absolute;
-	top: -100%; left: 0; right: 0;
-	height: 7em;
-	margin-top: 5em;
-	box-sizing: border-box;
-	padding: 1em;
-
-	border-top: 1px solid rgb(241, 232, 219);
-	background: linear-gradient(to bottom, #fffbf0, rgba(255,255,255,0));
-	color: #aaa;
-	font-size: 90%;
-	font-style: italic;
 }
