PG: Implement middot, wrap caps (commented out)
foo-bar -> foo·bar
FOO-bar -> <span class="pg-stress">FOO</span>-bar

--- a/transformers/bundle-assets/pg.css
+++ b/transformers/bundle-assets/pg.css
@@ -101,6 +101,13 @@ main.pg-ruby {
 	opacity: 1;
 	background: #bef;
 }
+
+
+/**/
+.pg-uc span.pg-stress {
+	text-transform: lowercase;
+	font-variant-caps: all-small-caps;
+}
 .pg-or {
 	font-style: italic;
 	font-weight: 300;
