--- a/transformers/bundle-assets/style.css
+++ b/transformers/bundle-assets/style.css
@@ -99,6 +99,26 @@ rp {
 	display: inline;
 }
 
+.pg-hover ruby {
+	position: relative;
+	display: inline-flex;
+	flex-direction: column-reverse;
+}
+.pg-hover ruby rt,
+.pg-hover ruby rp {
+	display: none;
+}
+.pg-hover ruby rt {
+	display: inline;
+	position: absolute;
+	top: -2em;
+	left: 0;
+	background: white;
+	border: 1px solid black;
+	border-radius: 2px;
+	padding: 4px;
+}
+
 /* SCROLL */
 
 footer {
