--- a/transformers/bundle-assets/style.css
+++ b/transformers/bundle-assets/style.css
@@ -90,6 +90,14 @@ rp {
 .pg-ruby rt {
 	font-size: 80%;
 }
+.pg-inline rb {
+	padding-right: 0.15em;
+}
+.pg-inline rt,
+.pg-inline rp {
+	font-size: 90%;
+	display: inline;
+}
 
 /* SCROLL */
 
