Template: Minor changes

--- a/transformers/bundle-assets/main.css
+++ b/transformers/bundle-assets/main.css
@@ -2,7 +2,7 @@
 
 /* Standard page width */
 body {
-	max-width: 8in;
+	max-width: 48em;
 	margin: 5em auto 5em;
 	padding: 2em 1em;
 	line-height: 1.5;
