--- a/transformers/bundle-assets/main.css
+++ b/transformers/bundle-assets/main.css
@@ -37,3 +37,13 @@ main, .text {
 #bonuses {
 	margin-top: 4em !important;
 }
+
+ins {
+	text-decoration: none;
+	background: #dfb;
+}
+del {
+	text-decoration: line-through;
+	background: #fbc;
+	color: #555;
+}
