IPA: Add customize modal

--- a/transformers/bundle-assets/pg.css
+++ b/transformers/bundle-assets/pg.css
@@ -64,6 +64,11 @@ main.pg-ruby {
 	display: none;
 }
 
+/* flags */
+.pg-flag-hide .flag {
+	display: none;
+}
+
 /* hover */
 .pg-hover ruby {
 	position: relative;
