--- a/transformers/bundle-assets/style.css
+++ b/transformers/bundle-assets/style.css
@@ -3,6 +3,7 @@
 @import url('main.css');
 @import url('header.css');
 @import url('footer.css');
+@import url('modal.css');
 
 @import url('highlight.css');
 @import url('pg.css');
