--- a/transformers/bundle-assets/modal.css
+++ b/transformers/bundle-assets/modal.css
@@ -1,5 +1,7 @@
+dialog { border-radius: 0.5em; }
 dialog h2 { margin: 0.5em 0; }
-dialog section h4 { margin-top: 0; }
+dialog h3 { font-weight: 600; }
+dialog section h4 { font-weight: 500; margin-top: 0; }
 dialog section {
 	display: inline-table /*TODO*/;
 	margin-right: 1.5em;
